--- a/templates/clients/index.html.twig
+++ b/templates/clients/index.html.twig
@@ -1,7 +1,84 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ClientsController!{% endblock %}
+{% block title %}Clients{% endblock %}
 
 {% block body %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>GESTION DE STOCK</title>
+
+    <!-- Custom fonts for this template-->
+</head>
+
+<body class="bg-gradient-primary">
+
+    <div class="container">
+
+        <div class="card o-hidden border-0 shadow-lg my-5">
+            <div class="card-body p-0">
+                <!-- Nested Row within Card Body -->
+                <div class="row">
+                    <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                    <div class="col-lg-12">
+                        <div class="p-5">
+                            <div class="form-group row">
+                                <div class="col-sm-6">
+                                <h6 class="m-0 font-weight-bold text-primary">Tables des Clients</h6>     
+                                </div>
+                                <div class="col-sm-2">
+                                    <a href="{{ path('app_home_dashboard', {'id': id}) }}" class="btn btn-primary"> <i class="fa fa-home"></i>Home</a> 
+                                </div>
+                                <div class="col-sm-2"> 
+                                    <a href="{{ path('clients_list')}}" class="btn btn-success"><i class="fa fa-list"></i> Liste</a>
+                                                
+                                </div>
+                                  
+                            </div>
+                            
+                            {{ form_start(form)}}
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <label>Nom clients</label>
+                                        {{form_widget(form.nom)}}
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <label>telephone clients</label>
+                                        {{form_widget(form.telephone)}}
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="form-group row">
+                                    <div class="col-sm-6">
+                                        <label>Adresse du client</label>
+                                        <input type="tel" class="form-control form-control-user" id="Adress"
+                                        name="Adress" placeholder="Adresse du client" required>
+                                    </div>
+                                </div>
+                                <button type="submit" name="submit" id="submit" class="btn btn-primary btn-user btn-block">
+                                    Enregistrer
+                                </button>
+                            {{ form_end(form)}}
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+</body>
+
+</html>
 
 {% endblock %}
+
