ebregistrement des camion

--- a/templates/navbar.html.twig
+++ b/templates/navbar.html.twig
@@ -124,7 +124,7 @@
             <div class="bg-white py-2 collapse-inner rounded">
                 <h6 class="collapse-header">Camion</h6>
                 <a class="collapse-item" href="{{ path('app_camion') }}">Ajouter Camion</a>
-                <a class="collapse-item" href="{{ path('produit_list') }}">Liste Camion</a>
+                <a class="collapse-item" href="{{ path('app_camion_list') }}">Liste Camion</a>
             </div>
         </div>
     </li>
