mettre le net en caisse dans les rapport

--- a/templates/rapport/rapport_day.html.twig
+++ b/templates/rapport/rapport_day.html.twig
@@ -125,10 +125,10 @@
                     <td>{{sommeCredit}}</td>
                     <td>{{sommeBanque}}</td>
                     <td>{{sommeReduction}}</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{{sommeDepense}}</td>
+                    <td>{{totalversement}}</td>
+                    <td>{{sommecaisse}}</td>
+                    <td>{{ (sommeBanque + sommeCash + sommeOm) - sommeReduction}}</td>
                 </tr>
                 <tr>
                     <td colspan="4"> Argent en main du 01-12-2024 au {{date}}</td>
