integration de la modification des kilometrage

--- a/templates/kilometrage/edit.html.twig
+++ b/templates/kilometrage/edit.html.twig
@@ -61,7 +61,7 @@
                                         <input type="date" class="form-control form-control-user" name="kilometrages[{{kilometrages.id}}][createtAt]" value="{{kilometrages.createtAt | date('Y-m-d')}}">
                                     </div>
                                     <div class="col-md-4">
-                                        <label for="kilometrages_status">montant</label>
+                                        <label for="kilometrages_status">kilometragejour</label>
                                         <input type="number" class="form-control form-control-user" name="kilometrages[{{kilometrages.id}}][kilometragejour]" value="{{kilometrages.kilometragejour}}">
                                     </div>
                                     <div class="col-md-4">
