modification des type de rproduuit

--- a/templates/vente/index.html.twig
+++ b/templates/vente/index.html.twig
@@ -172,10 +172,10 @@
                                                 </p>
                                                 <p class="col-md-2" >
                                                    Origine: <select class="form-control form-select" name="esperce" id="esperce" required>
-                                                        <option value="CARRIERE">CARRIERE</option>
-                                                        <option value="RIVIERE">RIVIERE</option>
-                                                        <option value="MARIN">MARIN</option>
-                                                        <option value="DESERTIQUE">DESERTIQUE</option>
+                                                        <option value="SABLE SANAGA">SABLE SANAGA</option>
+                                                        <option value="SABLE CARRIERE">SABLE CARRIERE</option>
+                                                        <option value="GRAVIER 5 15">GRAVIER 5 15</option>
+                                                        <option value="GRAVIER 15 25">GRAVIER 15 25</option>
                                                         <option value="AUTRE">AUTRE</option>
                                                     </select>
                                                     
