--- a/templates/clients/index.html.twig
+++ b/templates/clients/index.html.twig
@@ -58,7 +58,7 @@
                                 <hr>
                                 <div class="form-group row">
                                     <div class="col-sm-6">
-                                        <label>Adresse du client</label>
+                                        <label>Localisation du client</label>
                                         <input type="tel" class="form-control form-control-user" id="Adress"
                                         name="Adress" placeholder="Adresse du client" required>
                                     </div>
